<resources>
    <string name="app_name">小粉拳</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">账号必须带@</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="name">名称</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="auto_login">自动登录</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="enter">进入</string>
    <string name="unregister">退出当前账号</string>
    <string name="setting">设置</string>
    <string name="WeChat">微信</string>
    <string name="picture">图片</string>
    <string name="file_directory">文件</string>
    <string name="a_or_p_not_blank">用户名或密码不能为空</string>
    <string name="no_picture_selected">请选择图片</string>
    <string name="no_file_selected">请选择要上传的文件</string>
    <string name="file_name_not_modify">文件（夹）名称没有改变</string>
    <string name="file_name_length_limit">文件名长度超过限制</string>
    <string name="search_keyword_empty">搜索关键词不能为空</string>
    <string name="forbidden_to_download">您没有下载权限</string>
    <string name="manage_members">成员管理</string>
    <string name="change_owner">变更拥有者</string>
    <string name="view_members">查看成员</string>
    <string name="check_details">查看详情</string>
    <string name="dismiss_team">解散团队</string>
    <string name="exit_team">退出团队</string>
    <string name="dismiss_team_warning">解散后会删除团队空间中的所有数据，是否继续执行？</string>
    <string name="exit_team_warning">是否退出该团队？</string>
    <string name="delete_member_warning">是否删除该成员？</string>
    <string name="copy_success">复制成功</string>
    <string name="save">保存</string>
    <string name="back">返回</string>
    <string name="link">链接</string>
    <string name="authority">权限</string>
    <string name="download">下载</string>
    <string name="brower">预览</string>
    <string name="link_access_code">提取码</string>
    <string name="select">选择</string>
    <string name="clean">清除</string>
    <string name="start_time_lt_end_time">开始时间必须小于结束时间</string>
    <string name="rename">重命名</string>
    <string name="name_hint"><![CDATA[名称不能包含/\\?:*\"<>|，不能以.开始和结束，且长度不能超过246字节。]]></string>
    <string name="rename_hint"><![CDATA[命名提示：不能包含/\\?:*\"<>| ，不能以.开始和结束]]></string>
    <string name="exceed_team_space_max_member_num">团队成员数量达到最大值</string>
    <string name="link_share">链接分享</string>
    <string name="delete_link_share">取消分享</string>
    <string name="other_link">其他链接</string>
    <string name="current_link">当前链接</string>
    <string name="permissions_setting">权限设置</string>
    <string name="link_effect_at">有效期</string>
    <string name="link_accessCode">提取码</string>
    <string name="share_to">分享至</string>
    <string name="add_link">创建新链接</string>
    <string name="never_expires">无时间限制</string>
    <string name="not_configured">未设置</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="email">邮件</string>
    <string name="copy_link">复制链接</string>
    <string name="moments">朋友圈</string>
    <string name="weibo">微博</string>
    <string name="sms">短信</string>
    <string name="create_link_success">创建成功</string>
    <string name="permission_preview">仅预览</string>
    <string name="permission_download">可下载</string>
    <string name="permission_upload">可上传</string>
    <string name="permission_download_upload">可预览 / 可上传 / 可下载</string>
    <string name="access_link_info_failed">获取链接失败</string>
    <string name="create_new_link_failed">创建链接失败</string>
    <string name="delete_failed">删除失败</string>
    <string name="delete_success">删除成功</string>
    <string name="link_already_expired">链接已失效</string>
    <string name="copy">复制</string>
    <string name="link_setting_confirm">确定</string>
    <string name="link_setting">链接设置</string>
    <string name="access_authority">访问权限</string>
    <string name="downloadable">可下载</string>
    <string name="uploadable">可上传</string>
    <string name="link_expiry">有效期</string>
    <string name="shareLink">分享</string>
    <string name="sharetogether">共享</string>
    <string name="preview_only">仅预览</string>
    <string name="upload_permission_tip">允许他人上传文件至本文件夹</string>
    <string name="accessCode_setting_tip">设置提取码，保障文件隐私</string>
    <string name="permission_modify_success">保存成功</string>
    <string name="permission_not_modify">未作任何修改</string>
    <string name="permission_effective_time_not_set">无时间限制</string>
    <string name="time_no_limit">无限制</string>
    <string name="time_seven_days">7 天</string>
    <string name="time_thirty_days">30 天</string>
    <string name="time_custom">自定义</string>
    <string name="time_start_date">开始日期</string>
    <string name="time_end_date">结束日期</string>
    <string name="save_time">确定</string>
    <string name="please_set_start_time">请选择开始日期</string>
    <string name="end_time_not_less_than_current_time">失效日期不能早于当前时间</string>
    <string name="history_link">历史链接</string>
    <string name="delete_all_link">删除全部</string>
    <string name="link_create_at">创建于</string>
    <string name="edit_link">编辑</string>
    <string name="share">分享</string>
    <string name="adapter_permission_preview">仅预览/" "</string>
    <string name="adapter_permission_download">可预览/可下载/" "</string>
    <string name="adapter_permission_upload">可预览/可上传/" "</string>
    <string name="adapter_permission_download_upload">可预览/可上传/可下载/" "</string>
    <string name="not_configured_access_code">未设置提取码</string>
    <string name="link_expired">已失效</string>
    <string name="link_not_effective">暂未生效</string>
    <string name="no_more_link">无其他链接</string>
    <string name="file_link_info">链接信息</string>
    <string name="enter_domain_account">请输入登录名、姓名或者群组名</string>
    <string name="set_link_start_time">请设置外链生效日期</string>
    <string name="delete">删除</string>
    <string name="selected_all">全选</string>
    <string name="view_the_version">查看版本</string>
    <string name="received_share">收到的共享</string>
    <string name="upload">上传</string>
    <string name="select_link_permission">请选择链接权限</string>
    <string name="number_selected">%d个已选择</string>
    <string name="share_success">设置共享关系成功</string>
    <string name="sharer">共享者</string>
    <string name="member">成员</string>
    <string name="team_space_owner">拥有者：</string>
    <string name="a_or_p_not_right">账号或密码不正确</string>
    <string name="select_one">请至少选择一个</string>
    <string name="search">搜索</string>
    <string name="no_contacts">未搜索到相关用户</string>
    <string name="maximum_members">成员数配额</string>
    <string name="members_count">当前成员数</string>
    <string name="maximum_capacity">空间配额</string>
    <string name="used_capacity">已用空间</string>
    <string name="unlimited">无限制</string>
    <string name="members">已添加成员</string>
    <string name="added">已添加</string>
    <string name="transfer_to">变更拥有者后，原拥有者会自动降级为管理员，请谨慎操作。确认要变更吗？</string>
    <string name="please_select_one_members">请至少选择一位成员</string>
    <string name="owner">拥有者</string>
    <string name="editor">编辑者</string>
    <string name="manager">管理者</string>
    <string name="uploadAndView">上传者和查看者</string>
    <string name="uploader">上传者</string>
    <string name="viewer">查看者</string>
    <string name="previewer">预览者</string>
    <string name="offline_login_success">离线登录成功</string>
    <string name="only_single_operation">此操作只允许单个文件操作</string>
    <string name="cancel_selected_all">取消全选</string>
    <string name="need_permission">需要您授予存储、读取电话状态的权限，否则部分功能不能正常使用。</string>
    <string name="accredit">授权</string>
    <string name="operation_success">操作成功</string>
    <string name="repeat_name">存在相同名称的文件（文件夹）</string>
    <string name="same_parent_name">目标位置未改变</string>
    <string name="sub_folder_conflict">目标文件夹是源文件夹的子文件夹</string>
    <string name="same_folder_conflict">目标文件夹和源文件夹相同</string>
    <string name="auto_rename">部分文件（文件夹）存在相同名称，是否自动重命名？</string>
    <string name="transporting">传输中</string>
    <string name="transported">传输完成</string>
    <string name="stop_all">全部暂停</string>
    <string name="start_all">全部开始</string>
    <string name="delete_all">删除全部</string>
    <string name="setting_clear_cache_lable">清除缓存</string>
    <string name="no_wifi_prompt_lable">非Wi-Fi时提示</string>
    <string name="photo_backup_lable">相册备份</string>
    <string name="auto_login_lable">自动登录</string>
    <string name="setting_language_lable">语言</string>
    <string name="photo">图片</string>
    <string name="all_image">所有图片和视频</string>
    <string name="is_clear_cache">确定要清除缓存吗？</string>
    <string name="upload_success">上传成功</string>
    <string name="chinasoft_copyright_2017_2020">©2017-2018 中软国际科技服务有限公司  版权所有</string>
    <string name="waiting">请稍等...</string>
    <string name="download_success">下载成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="max_selected_img">最多选择%d张图片</string>
    <string name="photo_select_upload">上传(%1$d/%2$d)</string>
    <string name="delete_link_warnimg">如果此链接已分享给其他人，它将不可访问，你想继续吗？</string>
    <string name="link_info_wraing">可以创建多个链接(最多3条)为访问人设置不同权限</string>
    <string name="photo_back_enable">开启</string>
    <string name="select_photo_album">选择备份的相册</string>
    <string name="select_album_back">选择备份相册</string>
    <string name="only_wifi_auto_album_back">仅在Wifi下自动备份</string>
    <string name="view_album_back">查看相册备份</string>
    <string name="close_album_back">关闭相册备份</string>
    <string name="left">剩余</string>
    <string name="with_system">跟随系统</string>
    <string name="simple_zh">简体中文</string>
    <string name="english">English</string>
    <string name="about">关于</string>
    <string name="version_upload">版本更新</string>
    <string name="not_need_updat">已经是最新版本不需要升级</string>
    <string name="net_time_out">网络连接超时</string>
    <string name="album_back_description">精彩瞬间轻松上云，永久珍藏</string>
    <string name="backup_finish">备份完成</string>
    <string name="select_album_to_backup">请选择需要备份的相册</string>
    <string name="back_folder">已备份相册</string>
    <string name="backup_running">备份中...</string>
    <string name="wait_backup_finish">请等待备份任务完成</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="search_file">搜索</string>
    <string name="batch_delete_file">选择 %s 项，确定删除吗？</string>
    <string name="user_info">用户信息</string>
    <string name="profile_photo">头像</string>
    <string name="user_info_name">姓名</string>
    <string name="null_file">未发现文件</string>
    <string name="upload_add_file">您可以点击上传按钮添加文件</string>
    <string name="no_share_link">您目前没有发起任何链接</string>
    <string name="no_share_receive">您目前没有收到任何共享项目</string>
    <string name="no_share_send">您目前没有发起任何共享项目</string>
    <string name="upgrade_info">应用程序存在新版本，为了您更好的操作体验，是否需要下载安装最新版本？</string>
    <string name="upgrade_runing_title">下载安装包…</string>
    <string name="same_name_team">存在相同名称的团队空间</string>
    <string name="disagree">不同意</string>
    <string name="agree">同意,并开始使用</string>
    <string name="change_password_wrring">为了您的数据安全，请修改默认密码并重新登录</string>
    <string name="not_share_myself">不能共享给自己</string>
    <string name="teamspace_name_not_empt">团队空间名称不能为空</string>
    <string name="network_not_available">当前网络不可用</string>
    <string name="unregister_warn">是否确定注销？</string>
    <string name="forbidden_operation">您无此权限，请检查权限</string>
    <string name="user_locked">用户被锁定</string>
    <string name="invalid_space_status">个人空间或团队空间被停用</string>
    <string name="source_forbidden">源文件（文件夹）权限不足</string>
    <string name="dest_forbidden">目标文件（文件夹）权限不足</string>
    <string name="client_unauthorized">终端被禁用</string>
    <string name="no_such_user">用户不存在</string>
    <string name="file_move">移动</string>
    <string name="tips_group_detail">如果账号出现过异常提示，会记录下来并展示，可以侧滑进行移除（异常信息只记录在本地，无法进行云同步，异常账号请通过该设备移除；卸载或清除应用数据后，本地异常信息会被清空，账号显示状态正常，而实际可能异常，该状态无法自主检测，需要启动后才会根据转发情况记录。）</string>
</resources>