<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_above="@+id/llForm"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:src="@drawable/weibo" />

    <LinearLayout
        android:id="@+id/llForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">


        <EditText
            android:text="123"
            android:id="@+id/etAccout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:drawableLeft="@drawable/account_icon"
            android:drawablePadding="20dp"
            android:hint="请输入微博账号"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textSize="@dimen/item_text_content_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="1dp"
            android:background="#55aaaaaa" />

        <EditText
            android:text="123"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="20dp"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textSize="@dimen/item_text_content_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="1dp"
            android:background="#55aaaaaa" />

        <TextView
            android:id="@+id/tvOrg"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:drawableLeft="@drawable/ic_orgnization"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:hint="请选择组织"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textSize="@dimen/item_text_content_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="1dp"
            android:background="#55aaaaaa" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/cb_auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="false"
                android:gravity="center_vertical"
                android:textColor="#6a6a6a"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/cb_auto_login"
                android:gravity="center_vertical"
                android:text="@string/auto_login"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/cb_remember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tvRememberPassword"
                android:checked="false"
                android:gravity="center_vertical"
                android:textColor="#6a6a6a"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvRememberPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/remember_password"
                android:textSize="15sp" />

        </RelativeLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llForm"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_login_btn"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="登录使用说明"
            android:textColor="@color/item_text_content"
            android:textSize="12sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/line" />

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="登录常见问题"
            android:textColor="@color/item_text_content"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>