<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".mvp.activity.GroupDetailActivity">

    <include
        android:id="@+id/title"
        layout="@layout/title_bar_right_txt" />

    <LinearLayout
        android:id="@+id/llMulti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="10dp">


            <CheckBox
                android:id="@+id/cbSelectAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawablePadding="10dp"
                android:text="全选"
                android:textColor="@color/item_text_content"
                android:textSize="@dimen/item_text_tips_size" />

            <CheckBox
                android:id="@+id/cbAllAbnormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/cbSelectAll"
                android:text="所有异常账号"
                android:textColor="@color/item_text_content"
                android:textSize="@dimen/item_text_tips_size" />

            <TextView
                android:id="@+id/tvDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_txt_white_bg_theme_border_radius"
                android:paddingBottom="3dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="3dp"
                android:text="@string/delete"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvMove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/tvDelete"
                android:background="@drawable/shape_txt_white_bg_blue_border_radius"
                android:paddingBottom="3dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="3dp"
                android:text="@string/file_move"
                android:textColor="@color/txt_blue"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:id="@+id/divide"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="@color/bg_white" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/flContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llTips"
        android:layout_below="@+id/llMulti">

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlEnableLoadmoreWhenContentNotFull="false"
            app:srlEnableRefresh="true"
            app:srlEnableScrollContentWhenLoaded="true">


            <com.ssy.pink.view.recyclerViewBase.SwipeRecyclerView

                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="vertical" />
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/llTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llAdd"
        android:background="@color/bg_white"
        android:orientation="vertical"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:srcCompat="@drawable/ic_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="分组账号："
                android:textColor="@color/item_text_tips"
                android:textSize="@dimen/item_text_tips_size" />

            <TextView
                android:id="@+id/tvAccoutNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="5"
                android:textColor="@color/item_text_tips"
                android:textSize="@dimen/item_text_tips_size" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="40dp"
            android:text="@string/tips_group_detail"
            android:textColor="@color/item_text_tips"
            android:textSize="@dimen/item_text_tips_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAdd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="添加账号"
            android:textColor="@color/item_text_title"
            android:textSize="@dimen/item_text_content_size" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/btn_ip" />
</RelativeLayout>